--- a/Serverless Workflow/SWF States Duration.dash.yaml
+++ b/Serverless Workflow/SWF States Duration.dash.yaml
@@ -8,7 +8,7 @@ properties:
   cardsHeight: 20
   cardsWidth: 90%
 
-  workflowId: 6164b616-45d6-4ad9-8d46-8ede7b6957fd
+  workflowId: ff3bf22e-4c52-4d9a-b48b-1ecb3d58ff54
 
   # cards template
   cardTemplate: >-
@@ -31,7 +31,8 @@ datasets:
                   start,
                   0,
                   $end , 
-                  $end / 2, 
+                  $end / 2,
+                  variables, 
                   $n.type, 
                   $n.name,
                   $n.nodeId, 
@@ -42,7 +43,7 @@ datasets:
               ]
           });
       )
-    url: ${dataIndexUrl}/graphql/?query=%7BProcessInstances(where%3A%7Bid%3A%7Bin%3A%20%5B"${workflowId}"%5D%7D%7D)%7BprocessId%20state%20id%20start%20lastUpdate%20nodes%20%7Bid%20nodeId%20name%20type%20enter%20exit%7D%7D%7D%0A
+    url: ${dataIndexUrl}/graphql/?query=%7BProcessInstances(where%3A%7Bid%3A%7Bin%3A%20%5B"${workflowId}"%5D%7D%7D)%7BprocessId%20state%20id%20start%20lastUpdate%20variables%20nodes%20%7Bid%20nodeId%20name%20type%20enter%20exit%7D%7D%7D%0A
     columns:
       - id: workflowId
         type: label
@@ -58,6 +59,8 @@ datasets:
         type: number
       - id: middle
         type: label
+      - id: variables
+        type: label
       - id: type
         type: label
       - id: name
@@ -67,7 +70,7 @@ datasets:
       - id: nodeStartMillis
         type: number
       - id: nodeStart
-        type: label
+        type: number
       - id: nodeEnd
         type: number
       - id: duration
@@ -179,8 +182,9 @@ pages:
                     option: >-
                       {
                           "xAxis":{
-                            "position": "top"
-                          },
+                            "position": "top",
+                            "type": "value"
+                          },                                                    
                           "series":[
                               {
                                   "itemStyle": {
@@ -197,7 +201,8 @@ pages:
                                   "name": "Duration",
                                   "encode":{
                                       "x": ["start", "nodeStart", "middle", "nodeEnd", "end"],
-                                      "y": "name"
+                                      "y": "name",
+                                      "itemName": ["Node Duration"]
 
                                   }
                               },
@@ -237,6 +242,9 @@ pages:
                   external:
                     width: "${chartsWidth}"
                     height: "${chartsHeight}"
+                  filter:
+                    enabled: "true"
+                    listening: "true"
                   dataSetLookup:
                     dataSetUuid: nodes
                     filter:
@@ -259,3 +267,44 @@ pages:
                         order: DESCENDING
                       - column: nodeId
                         order: DESCENDING
+      - columns:
+          - properties:
+              width: 100%
+              margin-left: 80px
+            components:
+              - properties:
+                  width: 80%
+                settings:
+                  type: SELECTOR
+                  subtype: SELECTOR_SLIDER
+                  filter:
+                    enabled: "true"
+                    notification: "true"
+                  dataSetLookup:
+                    uuid: nodes
+                    group:
+                      - functions:
+                          - source: nodeStart
+                            function: MIN
+                          - source: end
+                            function: MAX
+      - columns:
+          - properties:
+              width: 100%
+              margin-left: 80px
+            components:
+              - properties:
+                  width: 80%
+                settings:
+                  component: table
+                  filter:
+                    enabled: "true"
+                    listening: "true"
+                  external:
+                      width: 100%
+                  dataSetLookup:
+                    uuid: nodes
+                    rowCount: 1
+                    group:
+                      - functions:
+                          - source: variables
