--- a/openshift/events.yml
+++ b/openshift/events.yml
@@ -1,7 +1,7 @@
 properties:
     token: TOKEN HERE
     clusterUrl: CLUSTER URL
-    proxyUrl: https://kie-sandbox-extended-services-kie-sandbox.kie-tooling-0ad6762cc85bcef5745bb684498c2436-0000.us-south.containers.appdomain.cloud/devsandbox
+    proxyUrl: https://kie-sandbox-extended-services-kie-sandbox.rhba-cluster-0ad6762cc85bcef5745bb684498c2436-0000.us-south.containers.appdomain.cloud
 datasets:
 - uuid: events
   url: ${proxyUrl}
